--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           java-package: jdk
       - run: |
           ls
+          mkdir .m2
           touch .m2/data.txt
           ls
       - uses: actions/cache@v3
